# rsj_seminar_2021_ros_basics

./: CMakeLists.txt  package.xml
launch/: test.launch
msg/: Text.msg
src/: Publish.cpp  Show.cpp
